# toolrate-mcp

./: README.md
python/: LICENSE  README.md  pyproject.toml  smoke.py
python/src/toolrate_mcp/: __init__.py  cli.py  client.py  errors.py  server.py  summary.py
python/src/toolrate_mcp/tools/: assess.py  categories.py  fallback_chain.py  hidden_gems.py  my_usage.py  register.py  report.py  route_llm.py  search_tools.py
typescript/: .npmignore  LICENSE  README.md  package-lock.json  package.json  smoke.mjs  tsconfig.json
typescript/prompts/: guard-pattern.md
typescript/src/: client.ts  errors.ts  index.ts  schema.ts  server.ts  summary.ts  types.ts
typescript/src/tools/: assess.ts  categories.ts  fallback_chain.ts  hidden_gems.ts  my_usage.ts  register.ts  report.ts  route_llm.ts  search_tools.ts
