[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "toolrate-mcp"
version = "0.1.1"
description = "Official MCP server for ToolRate — drop native reliability scoring, LLM routing, and fallback chains into any Python-first MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ToolRate", email = "bleep@toolrate.ai"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "toolrate",
    "claude-code",
    "cursor",
    "ai",
    "agents",
    "llm-router",
    "reliability",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
toolrate-mcp = "toolrate_mcp.cli:main"

[project.urls]
Homepage = "https://toolrate.ai"
Documentation = "https://api.toolrate.ai/docs"
Repository = "https://github.com/netvistamedia/toolrate-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/toolrate_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "prompts/",
    "README.md",
    "LICENSE",
]
